wallabag/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wallabag
  namespace: wallabag
  labels:
    app: wallabag
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: wallabag
  template:
    metadata:
      labels:
        app: wallabag
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                matchExpressions:
                  - key: node-role.kubernetes.io/control-plane
                    operator: DoesNotExist
      containers:
        - name: wallabag
          image: 127.0.0.1:30500/wallabag:2.6.14-patched
          imagePullPolicy: IfNotPresent
          args: ["wallabag"]
          ports:
            - name: wallabag
              containerPort: 80
          volumeMounts:
            - name: data
              mountPath: /var/www/wallabag/data
            - name: images
              mountPath: /var/www/wallabag/web/assets/images
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: wallabag-data-pvc
        - name: images
          persistentVolumeClaim:
            claimName: wallabag-images-pvc
