wallabag/tailscale-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wallabag-ts
  namespace: wallabag
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: wallabag
      port:
        number: 80
  tls:
    - hosts:
        - later
